--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Doxygen REQUIRED)
 
 # Find all MyGL header files
-file(GLOB_RECURSE MYGL_HEADER_FILES ${INCLUDE_DIR}/MyGL/*.hpp)
+file(GLOB_RECURSE MYGL_HEADER_FILES ${MYGL_INCLUDE_DIR}/MyGL/*.hpp)
 
 set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/include/MyGL)
 set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
