--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Configure CMake
         shell: bash
         working-directory: ${{github.workspace}}/build
-        run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DMYGL_BUILD_SAMPLE=ON -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/install
+        run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DMYGL_BUILD_SAMPLE=ON -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/install -DCPM_USE_LOCAL_PACKAGES=ON
         
       - name: Build
         shell: bash
@@ -37,14 +37,14 @@ jobs:
         working-directory: ${{github.workspace}}/user_test
         run: |
           g++ -c ${{github.workspace}}/test/ci_test_file.cpp -I/usr/include/freetype2 -I${{github.workspace}}/install/include/ -DMYGL_STATIC_DEFINE
-          g++ ci_test_file.o -o test ${{github.workspace}}/install/lib/libmygl.a ${{github.workspace}}/install/lib/libglfw3.a -ldl -lpthread
+          g++ ci_test_file.o -o test ${{github.workspace}}/install/lib/libmygl.a -lglfw -ldl -lpthread
 
       - name: Check test file compilation against shared libs
         shell: bash
         working-directory: ${{github.workspace}}/user_test
         run: |
           g++ -c ${{github.workspace}}/test/ci_test_file.cpp -I/usr/include/freetype2 -I${{github.workspace}}/install/include/
-          g++ ci_test_file.o -o test -L${{github.workspace}}/install/lib/ -lmygl ${{github.workspace}}/install/lib/libglfw3.a -ldl -lpthread
+          g++ ci_test_file.o -o test -L${{github.workspace}}/install/lib/ -lmygl -lglfw -ldl -lpthread
 
 
   test-windows-build:
