--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -36,14 +36,14 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}/user_test
         run: |
-          g++ -c ${{github.workspace}}/test/ci_test_file.cpp -I/usr/include/freetype2 -I${{github.workspace}}/install/include/ -DMYGL_STATIC_DEFINE
+          g++ -c ${{github.workspace}}/misc/ci_test_file.cpp -I/usr/include/freetype2 -I${{github.workspace}}/install/include/ -DMYGL_STATIC_DEFINE
           g++ ci_test_file.o -o test ${{github.workspace}}/install/lib/libmygl.a -L${{github.workspace}}/install/lib/ -lglfw -ldl -lpthread
 
       - name: Check test file compilation against shared libs
         shell: bash
         working-directory: ${{github.workspace}}/user_test
         run: |
-          g++ -c ${{github.workspace}}/test/ci_test_file.cpp -I/usr/include/freetype2 -I${{github.workspace}}/install/include/
+          g++ -c ${{github.workspace}}/misc/ci_test_file.cpp -I/usr/include/freetype2 -I${{github.workspace}}/install/include/
           g++ ci_test_file.o -o test -L${{github.workspace}}/install/lib/ -lmygl -lglfw -ldl -lpthread
 
 
@@ -69,8 +69,8 @@ jobs:
     
       - name: Check test file compilation against static libs
         working-directory: ${{github.workspace}}/user_test
-        run: cl ${{github.workspace}}/test/ci_test_file.cpp mygl-static.lib glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib /MT /Fe:test /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/freetype2 /D MYGL_STATIC_DEFINE /link /LIBPATH:${{github.workspace}}/install/lib
+        run: cl ${{github.workspace}}/misc/ci_test_file.cpp mygl-static.lib glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib /MT /Fe:test /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/freetype2 /D MYGL_STATIC_DEFINE /link /LIBPATH:${{github.workspace}}/install/lib
       
       - name: Check test file compilation against shared libs
         working-directory: ${{github.workspace}}/user_test
-        run: cl ${{github.workspace}}/test/ci_test_file.cpp mygl.lib glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib /MT /Fe:test /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/freetype2 /link /LIBPATH:${{github.workspace}}/install/lib
+        run: cl ${{github.workspace}}/misc/ci_test_file.cpp mygl.lib glfw3.lib freetype.lib opengl32.lib gdi32.lib user32.lib shell32.lib /MT /Fe:test /I ${{github.workspace}}/install/include /I ${{github.workspace}}/install/include/freetype2 /link /LIBPATH:${{github.workspace}}/install/lib
