FIxed issues on linux - linking libdl to the executables - added guards on GLWindow's methods calling glfw functions when the window is closed

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,6 +15,12 @@ function(config_target TARGET_NAME INSTALL_FILES INSTALL_DIRECTORIES)
   target_link_libraries(${TARGET_NAME}
     PUBLIC $<IF:$<TARGET_EXISTS:MyGL-static>,MyGL-static,MyGL>)
 
+  if(UNIX)
+    target_link_libraries(${TARGET_NAME}
+      PUBLIC dl
+    )
+  endif()
+
   target_include_directories(${TARGET_NAME}
     PUBLIC
       $<BUILD_INTERFACE:${MYGL_INCLUDE_DIR}>
