Support for custom shaders

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -52,3 +52,4 @@ endfunction()
 add_subdirectory(simple_program)
 add_subdirectory(text)
 add_subdirectory(magnifying_glass)
+add_subdirectory(custom_shader)
