--- a/examples/custom_shader/CMakeLists.txt
+++ b/examples/custom_shader/CMakeLists.txt
@@ -2,5 +2,5 @@ config_files(custom_shader.cpp)
 
 add_executable(custom_shader ${SOURCE_OUT})
 
-set(RESSOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/ressources)
-config_target(custom_shader INSTALL_SOURCE_OUT RESSOURCES_DIR)
+set(RESOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/resources)
+config_target(custom_shader INSTALL_SOURCE_OUT RESOURCES_DIR)
