--- a/examples/magnifying_glass/CMakeLists.txt
+++ b/examples/magnifying_glass/CMakeLists.txt
@@ -2,5 +2,5 @@ config_files(magnifying_glass.cpp)
 
 add_executable(magnifying_glass ${SOURCE_OUT})
 
-set(RESSOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/ressources)
-config_target(magnifying_glass INSTALL_SOURCE_OUT RESSOURCES_DIR)
+set(RESOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/resources)
+config_target(magnifying_glass INSTALL_SOURCE_OUT RESOURCES_DIR)
