--- a/examples/text/CMakeLists.txt
+++ b/examples/text/CMakeLists.txt
@@ -2,5 +2,5 @@ config_files(text.cpp)
 
 add_executable(text ${SOURCE_OUT})
 
-set(RESSOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/ressources)
-config_target(text INSTALL_SOURCE_OUT RESSOURCES_DIR)
+set(RESOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/resources)
+config_target(text INSTALL_SOURCE_OUT RESOURCES_DIR)
