--- a/examples/simple_program/CMakeLists.txt
+++ b/examples/simple_program/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(SOURCE_IN ${CMAKE_CURRENT_LIST_DIR}/simple_program.cpp)
+set(SOURCE ${CMAKE_CURRENT_LIST_DIR}/simple_program.cpp)
 
-add_executable(simple_program ${SOURCE_IN})
+add_executable(simple_program ${SOURCE})
 
-config_target(simple_program SOURCE_IN "")
+config_target(simple_program FILES ${SOURCE})
