--- a/examples/text/CMakeLists.txt
+++ b/examples/text/CMakeLists.txt
@@ -1,6 +1,11 @@
-config_files(text.cpp)
+config_file(text.cpp)
 
 add_executable(text ${SOURCE_OUT})
 
 set(RESOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/resources)
-config_target(text INSTALL_SOURCE_OUT RESOURCES_DIR)
+
+config_target(
+  text
+  FILES ${INSTALL_SOURCE_OUT}
+  DIRECTORIES ${RESOURCES_DIR}
+)
