--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Get lib versions
         id: get-lib-versions
-        run: echo "::set-output name=lib-versions::$(cat CMakeLists.txt | grep "GIT_TAG")"
-        shell: bash
+        working-directory: ${{github.workspace}}
+        run: echo "::set-output name=lib-versions::$(cat CMakeLists.txt | grep "GIT_TAG" | sed -e 's/^[[:space:]]*//' | tr '\n' ' ')"
 
       - uses: actions/cache@v2
         with:
@@ -28,7 +28,6 @@ jobs:
       
       - name: Install libraries
         run: sudo apt install -y libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
-        shell: bash
         
       - name: Configure CMake
         working-directory: ${{github.workspace}}/build
