Updated the README - added the workflow badges - changed the conditions on which the build workflows run - fixed a typo in the docs

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,6 +1,15 @@
 name: Linux build
 
-on: push
+on: 
+  push:
+    paths:
+      - CMakeLists.txt
+      - src/**
+      - include/**
+      - examples/**
+      - misc/ci_test_file.cpp
+      - cmake/CPM.cmake
+      - .github/workflows/**
 
 env:
   BUILD_TYPE: Release
