--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -10,47 +10,31 @@ on:
 
 jobs:
   documentation:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v2
-      - uses: ilammy/msvc-dev-cmd@v1
+      - uses: actions/checkout@v4
 
-      - name: Query the latest doxygen version from chocolatey
-        id: choco-doxygen-version
-        run: Write-Output "::set-output name=version::$(choco list doxygen.install --limit-output)"
-        shell: pwsh
-
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: "C:\\Program Files\\doxygen"
-          key: ${{github.workflow}}-${{steps.choco-doxygen-version.outputs.version}}
-
-      - name: Install Doxygen
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: choco install doxygen.install
-
-      - name: Create build environment
+      - name: Install the dependencies
         run: |
-          cmake -E make_directory ${{github.workspace}}/build ${{github.workspace}}/install
-          Write-Output "C:\\Program Files\\doxygen\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        shell: pwsh
-      
-      - name: Configure CMake
-        working-directory: ${{github.workspace}}/build
-        run: cmake ${{github.workspace}} -G "NMake Makefiles" -DMYGL_STATIC=OFF -DMYGL_SHARED=OFF -DMYGL_EXAMPLES=OFF -DMYGL_DOCUMENTATION=ON -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/install
+          sudo apt install -y ninja doxygen
+          sudo pip3 install meson
+
+      - name: Configure meson
+        run: |
+          meson wrap update-db 
+          meson setup build -Dmygl_build_doc=true --prefix=${{github.workspace}}/install
 
       - name: Generate the documentation pages
         working-directory: ${{github.workspace}}/build
         run: |
-          cmake --build .
-          cmake --install .
+          meson compile docs/docs
+          meson install
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{secrets.ACCESS_TOKEN}}
-          publish_dir: ${{github.workspace}}/install/share/doc/MyGL/html
+          publish_dir: ${{github.workspace}}/install/share/MyGL/html
           enable_jekyll: false
           allow_empty_commit: false
