--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Configure meson
         run: |
           meson wrap update-db 
-          meson setup build -Dmygl_build_doc=true --prefix=${{github.workspace}}/install
+          meson setup --prefix=${{github.workspace}}/install -Dmygl_build_doc=true build
 
       - name: Generate the documentation pages
         working-directory: ${{github.workspace}}/build
