CI: use PKG_CONFIG_PATH on linux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
   linux-build:
     runs-on: ubuntu-latest
 
+    env:
+        PKG_CONFIG_PATH: ${{github.workspace}}/install/lib/x86_64-linux-gnu/pkgconfig
+
     steps:
       - uses: actions/checkout@v4
 
@@ -37,13 +40,13 @@ jobs:
       - name: Check compilation against static libs
         working-directory: ${{github.workspace}}/user_test
         run: |
-          g++ -c ${{github.workspace}}/misc/ci_test_file.cpp $(pkg-config --cflags ${{github.workspace}}/install/lib/x86_64-linux-gnu/pkgconfig/{mygl.pc,freetype2.pc,glfw3.pc}) -DMYGL_STATIC_DEFINE
+          g++ -c ${{github.workspace}}/misc/ci_test_file.cpp $(pkg-config --cflags mygl.pc) -DMYGL_STATIC_DEFINE
           g++ ci_test_file.o -o test ${{github.workspace}}/install/lib/x86_64-linux-gnu/libmygl.a -L${{github.workspace}}/install/lib/x86_64-linux-gnu/ -lglfw -lfreetype -ldl -lpthread
 
       - name: Check compilation against shared libs
         working-directory: ${{github.workspace}}/user_test
         run: |
-          g++ -c ${{github.workspace}}/misc/ci_test_file.cpp $(pkg-config --cflags ${{github.workspace}}/install/lib/x86_64-linux-gnu/pkgconfig/{mygl.pc,freetype2.pc,glfw3.pc}) -DMYGL_STATIC_DEFINE
+          g++ -c ${{github.workspace}}/misc/ci_test_file.cpp $(pkg-config --cflags mygl.pc)
           g++ ci_test_file.o -o test -L${{github.workspace}}/install/lib/x86_64-linux-gnu/ -lmygl -lglfw -lfreetype -ldl -lpthread
 
   windows-build:
